--- a/charts/actions-runner-controller/values.yaml
+++ b/charts/actions-runner-controller/values.yaml
@@ -170,6 +170,7 @@ githubWebhookServer:
   replicaCount: 1
   syncPeriod: 10m
   secret:
+    enabled: false
     create: false
     name: "github-webhook-server"
     ### GitHub Webhook Configuration
